--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #664fc1;
 }
 
 .generator {
-  background-image: linear-gradient(-225deg, #20e2d7 0%, #f9fea5 100%);
+  background-image: linear-gradient(-225deg, #5D3FD3 0%, #5D3FD3 100%);
   border-radius: 10px;
   box-shadow: 0px 2px 10px rgba(245, 244, 244, 0.863);
   padding: 30px;
+  width: 400px;
 }
 .generator__header {
   text-align: center;
-  color: darkgreen;
+  color: wheat;
   margin-bottom: 20px;
 }
 .generator__password {
-  background-color: #308d46;
+  background-color: #5D3FD3;
   padding: 13px 10px;
   color: #fff;
   margin-bottom: 15px;
@@ -27,14 +29,13 @@
 }
 .copy__btn {
   color: #fff;
-  background: #308d46;
-  border: 2px solid;
+  background: #7F00FF;
   margin: 0px 21px;
   cursor: pointer;
   padding: 0px 10px;
 }
 .generator__btn {
-  background: #308d46;
+  background: #7F00FF;
   border: none;
   width: 100%;
   margin-top: 10px;
@@ -47,6 +48,6 @@
 .form-group {
   display: flex;
   justify-content: space-between;
-  color: gre;
+  color: wheat;
   margin-bottom: 15px;
 }
