--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #664fc1;
+  background: #dad1fd;
 }
 
 .generator {
